--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=GestaoSla
+spring.application.name=gestaoSla
 
 # Configuração do Banco de Dados
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=gestao_sla
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=gestaosla
 spring.datasource.username=sa
 spring.datasource.password=@ITB123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
